--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,6 +3,17 @@
 // VARIABLES
 //
 
+// My color palette
+// https://coolors.co/273043-9197ae-eff6ee-f02d3a-bf4342
+$spaceCadet: #273043;
+$coolGrey: #9197AE;
+$mintCream: #EFF6EE;
+$red: #BF4342;
+$cadetBlue: #B2BCD2;
+$cultured: #F2F4F8;
+$honeydew: #E7F1E4;
+$aliceBlue: #E5E9F0;
+
 // Colors
 $blue: #4183C4;
 
