--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <!--<article class="page">-->
 <head>
     <title>Homepage</title>
-    <link rel="stylesheet" href="/assets/style.scss">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css" />
     <!--    <style>-->
     <!--        img {-->
     <!--            border-radius: 8px;-->
@@ -101,8 +101,5 @@ layout: default
     </ul>
 </section>
 
-<!--  <div class="entry">-->
-<!--    {{ content }}-->
-<!--  </div>-->
 </body>
 <!--</article>-->
