--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
-<!--              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>-->
+              <a href="{{ site.baseurl }}/publications">Publications</a>
               <a href="{{ site.baseurl }}/Brian_Wang_CV.pdf">CV</a>
             </nav>
           </header>
