--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,15 +17,16 @@ layout: default
 <!--  <h1>{{ page.title }}</h1>-->
 
 <!--<h1>About me</h1>-->
-<div class="flex-parent">
+<div class="flexbox-intro">
 
     <img class="profile-picture" src="images/brian.jpg" alt="Picture of Brian Wang">
 
     <div class="intro-bio">
         <p>
             Hi! My name is Brian, and I'm a Ph.D. candidate in the Autonomous Systems Lab at Cornell University, advised by <a
-                href="https://www.mae.cornell.edu/faculty-directory/mark-campbell">Professor Mark Campbell</a>.
+                href="https://www.mae.cornell.edu/faculty-directory/mark-campbell">Professor Mark Campbell</a>.</p>
 
+        <p>
             I research robotic perception and planning in uncertain and unstructured environments.
         </p>
 
@@ -40,7 +41,7 @@ layout: default
 
 <!--<div class="flex-parent">-->
     <div class="container" id="recent-news">
-        <h2>Recent News</h2>
+        <h1>Recent News</h1>
         <ul>
             <li>Paper accepted to ICRA 2021! <a href="https://arxiv.org/abs/2103.15967">"Detecting and Mapping Trees in
                 Unstructured Environments with a Stereo Camera and Pseudo-Lidar"</a>.
@@ -54,52 +55,62 @@ layout: default
 
 <!--</div>-->
 
-<!--<section class="research">-->
-<!--    <h2>Research</h2>-->
-<!--    <table>-->
-<!--        <tr>-->
-<!--        <td>-->
-<!--            <h3>Pseudo-lidar Obstacle Detection for Robotic Navigation</h3>-->
-<!--            <p>The first pipeline for pseudo-lidar detection.</p>-->
-<!--        </td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--            <td>-->
-<!--                <h3>LDLS: Label Diffusion Lidar Segmentation</h3>-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--    </table>-->
+<section class="research">
+    <h1>Research</h1>
 
-<!--</section>-->
+    <p align="center">[<a href="{{ site.baseurl }}/publications">Full publications list</a>]
+        [<a href="https://scholar.google.com/citations?user=-ExLYw0AAAAJ&hl=e">Google scholar profile</a>]
+        [<a href="https://www.youtube.com/channel/UC6-xa50pMUIA2ZTko57Btrw">YouTube channel</a>]</p>
 
-<section class="publications">
-    <h2>Publications</h2>
-    <ul>
-        <li><b>Brian H. Wang</b>, Carlos Diaz-Ruiz, Jacopo Banfi, and Mark Campbell. "Detecting and Mapping Trees in
-            Unstructured Environments with a Stereo Camera and Pseudo-Lidar." IEEE International Conference on Robotics
-            and Automation (ICRA), 2021. [<a
-                    href="https://arxiv.org/abs/2103.15967">pdf</a>] [<a
-                    href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
-        </li>
-        <li><b>Brian H. Wang</b>, Wei-Lun Chao, Yan Wang, Bharath Hariharan, Kilian Q Weinberger, and Mark Campbell.
-            "LDLS: 3-D Object Segmentation Through Label Diffusion From 2-D Images." IEEE Robotics and Automation
-            Letters (RA-L), 2019. [<a
-                    href="https://arxiv.org/pdf/1910.13955.pdf">pdf</a>] [<a
-                    href="https://github.com/brian-h-wang/LDLS">code</a>]
-        </li>
-        <li>Yan Wang, Zihang Lai, Gao Huang, <b>Brian H. Wang</b>, Laurens van der Maaten, Mark Campbell, and Kilian Q.
-            Weinberger. "Anytime Stereo Image Depth Estimation on Mobile Devices." IEEE International Conference on
-            Robotics and Automation (ICRA), 2019. [<a href="https://arxiv.org/abs/1810.11408">pdf</a>]
-        </li>
-        <li><b>Brian H. Wang</b>, Yan Wang, Kilian Q. Weinberger, and Mark Campbell. "Deep Person Re-identification for
-            Probabilistic Data Association in Multiple Pedestrian Tracking." Arxiv preprint. [<a
-                    href="https://arxiv.org/abs/1810.08565">pdf</a>]
-        </li>
-        <li>Jake R. Gemerek, Silvia Ferrari, <b>Brian H. Wang</b>, and Mark Campbell. "Video-guided Camera Control for
-            Target Tracking and Following." IFAC Conference on Cyber-Physical & Human Systems, 2018.
-        </li>
-    </ul>
+    <div class="projects-row">
+        <img src="images/tree_detection.gif">
+        <div class="project-description">
+        <h3>Pseudo-lidar 3-D Obstacle Detection</h3>
+        <p>A pipeline for stereo camera-based 3-D object detection, using advancements in SLAM point cloud fusion to generate detector training data.</p>
+            <p class="citation"><b>Brian H. Wang</b>, Carlos Diaz-Ruiz, Jacopo Banfi, and Mark Campbell. "Detecting and Mapping Trees in
+                Unstructured Environments with a Stereo Camera and Pseudo-Lidar." IEEE International Conference on Robotics
+                and Automation (ICRA), 2021.</p>
+        <p>
+            [<a href="https://arxiv.org/abs/2103.15967">pdf</a>]
+            [<a href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
+            [<a href="https://www.youtube.com/watch?v=9kLyd6wyflE">video presentation</a>]</p>
+        </div>
+    </div>
+    <div class="projects-row">
+        <img src="images/LDLS.gif">
+        <div class="project-description">
+            <h3>LDLS: Label Diffusion Lidar Segmentation</h3>
+            <p>Lidar point cloud instance segmentation, using camera information to avoid any need for labeled 3-D training data.</p>
+
+            <p class="citation">
+                <b>Brian H. Wang</b>, Wei-Lun Chao, Yan Wang, Bharath Hariharan, Kilian Q Weinberger, and Mark Campbell.
+                "LDLS: 3-D Object Segmentation Through Label Diffusion From 2-D Images." IEEE Robotics and Automation
+                Letters (RA-L), 2019.
+                </pc>
+
+            <p>
+                [<a href="https://arxiv.org/pdf/1910.13955.pdf">pdf</a>]
+                [<a href="https://github.com/brian-h-wang/LDLS">code</a>]
+            </p>
+        </div>
+    </div>
+
 </section>
 
+<section class="about-me">
+    <h1>About Me</h1>
+
+    <p>I began my PhD studies at Cornell in 2016. Previously, I received my B.A. in Computer Science, also from Cornell.</p>
+
+    <p>As a PhD student, I've supervised undergraduate and masters' students in the Autonomous Systems Lab, working on projects including autonomous driving algorithms, robotics simulation, and SLAM (Simultaneous Localization and Mapping) based on 3-D object detection landmarks.</p>
+
+    <p>As a teaching assistant for MAE 5180, Autonomous Mobile Robots, I've also instructed Cornell students on fundamental robotics algorithms for estimation (including Kalman and particle filtering), mapping, SLAM, and path planning. I went on to develop course materials, exercises, and animations for the
+        <a href="https://courses.cornell.edu/preview_program.php?catoid=41&poid=20920">upcoming robotics program offered by eCornell</a>.</p>
+
+    <p>During Fall 2019, I interned at <a href="https://www.draper.com/">Draper Laboratory</a> in Cambridge, MA, where I worked on vision-based control for autonomous quadrotor drones.</p>
+
+    <p>When not working I enjoy snowboarding, rock climbing, and going on hikes around Ithaca, NY. I'm also a second degree black belt in Taekwondo, and as a Cornell student I competed in intercollegiate tournaments in the Eastern Collegiate Taekwondo Conference.</p>
+
+</section>
 </body>
 <!--</article>-->
