--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,7 +77,7 @@ layout: default
         </div>
     </div>
     <div class="projects-row">
-        <img src="images/LDLS.gif">
+        <img src="images/ldls.gif">
         <div class="project-description">
             <h3>LDLS: Label Diffusion Lidar Segmentation</h3>
             <p>Lidar point cloud instance segmentation, using camera information to avoid any need for labeled 3-D training data.</p>
