--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -97,7 +97,7 @@
     flex-basis: 200px;
     flex-grow: 1;
     max-width: 400px;
-    border: 4px solid $darkGray;
+    //border: 4px solid $darkGray;
     border-radius: 6px;
     height: 100%;
     margin-bottom: 40px;
