Update spacing on homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,10 +66,10 @@ layout: default
         <img src="images/tree_detection.gif">
         <div class="project-description">
         <h3>Pseudo-lidar 3-D Obstacle Detection</h3>
-        <p>A pipeline for stereo camera-based 3-D object detection, using advancements in SLAM point cloud fusion to generate detector training data.</p>
-            <p class="citation"><b>Brian H. Wang</b>, Carlos Diaz-Ruiz, Jacopo Banfi, and Mark Campbell. "Detecting and Mapping Trees in
+        <p>A pipeline for stereo camera-based 3-D object detection, using SLAM point cloud fusion to generate detector training data.</p>
+            <div class="citation"><b>Brian H. Wang</b>, Carlos Diaz-Ruiz, Jacopo Banfi, and Mark Campbell. "Detecting and Mapping Trees in
                 Unstructured Environments with a Stereo Camera and Pseudo-Lidar." IEEE International Conference on Robotics
-                and Automation (ICRA), 2021.</p>
+                and Automation (ICRA), 2021.</div>
         <p>
             [<a href="https://arxiv.org/abs/2103.15967">pdf</a>]
             [<a href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
@@ -82,11 +82,11 @@ layout: default
             <h3>LDLS: Label Diffusion Lidar Segmentation</h3>
             <p>Lidar point cloud instance segmentation, using camera information to avoid any need for labeled 3-D training data.</p>
 
-            <p class="citation">
+            <div class="citation">
                 <b>Brian H. Wang</b>, Wei-Lun Chao, Yan Wang, Bharath Hariharan, Kilian Q Weinberger, and Mark Campbell.
                 "LDLS: 3-D Object Segmentation Through Label Diffusion From 2-D Images." IEEE Robotics and Automation
                 Letters (RA-L), 2019.
-                </pc>
+                </div>
 
             <p>
                 [<a href="https://arxiv.org/pdf/1910.13955.pdf">pdf</a>]
