--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -7,6 +7,18 @@
   margin: 0 40px 0 40px;
 }
 
+.intro-bio p {
+  margin-top: 0;
+}
+
+section {
+  margin: 20px 0;
+}
+
+section:last-child {
+  margin-bottom: 80px;
+}
+
 .profile-picture {
   max-width: 240px;
   height: 100%;
@@ -116,14 +128,15 @@
   margin-left: 2rem;
   padding-top: 0;
   h3 {
+    font-size: 1.2em;
     font-weight: 200;
     text-align: left;
-    border-bottom: 1px solid $spaceCadet;
-    background: $spaceCadet;
+    //border-bottom: 1px solid $spaceCadet;
+    //background: $spaceCadet;
     color: $coolGrey;
-    border-radius: 4px;
-    border-left: 4px solid $coolGrey;
-    padding-left: 20px;
+    //border-radius: 4px;
+    //border-left: 4px solid $coolGrey;
+    //padding-left: 20px;
     margin-top: 0;
     padding-top: 0;
   }
@@ -131,7 +144,8 @@
   p {
     color: $coolGrey;
     text-align: left;
-    font-weight: 400;
+    font-weight: 200;
+    font-size: 16px;
   }
 
   vertical-align: top;
@@ -141,6 +155,9 @@
 
 .citation {
    font-size: 0.8rem;
+  color: $coolGrey;
+  text-align: left;
+  font-weight: 200;
 }
 
 #recent-news {
