Fix ICRA21 pdf link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,7 +71,7 @@ layout: default
                 Unstructured Environments with a Stereo Camera and Pseudo-Lidar." IEEE International Conference on Robotics
                 and Automation (ICRA), 2021.</div>
         <p>
-            [<a href="https://arxiv.org/abs/2103.15967">pdf</a>]
+            [<a href="https://arxiv.org/pdf/2103.15967.pdf">pdf</a>]
             [<a href="https://github.com/brian-h-wang/pseudolidar-tree-detection">code</a>]
             [<a href="https://www.youtube.com/watch?v=9kLyd6wyflE">video presentation</a>]</p>
         </div>
