Minor wording changes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,12 +25,12 @@ layout: default
         <div class="intro-bio">
             <p>
                 Hi! My name is Brian, and I'm a robotics researcher at <a href="https://www.draper.com/">Draper</a>,
-                where I develop
+                where I work on developing
                 perception and control capabilities for autonomous quadrotor drones.
             </p>
 
             <p>
-                Previously, I completed my Ph.D. in 2022 in the Autonomous Systems Lab at Cornell University, where I
+                I completed my Ph.D. degree in 2022 in the Autonomous Systems Lab at Cornell University, where I
                 was advised by <a href="https://campbell.mae.cornell.edu/">Professor Mark Campbell</a>.
                 My research at Cornell focused on robotic perception and planning in uncertain and unstructured
                 environments.
