Add multiple hypothesis planning paper

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,6 +55,9 @@ layout: default
     <div class="container" id="recent-news">
         <h1>News</h1>
         <ul>
+            <li>Paper available as Arxiv preprint! <a href="https://arxiv.org/abs/2308.07420">"Multiple-Hypothesis Path
+                    Planning with Uncertain Object Detections"</a>.
+            </li>
             <li>In February 2022, I joined the Autonomy and Real-Time Planning group at <a
                     href="https://www.draper.com/">Draper</a>
                 as a senior robotics researcher!</li>
