Fleet robotics updates

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,9 +24,10 @@ layout: default
 
         <div class="intro-bio">
             <p>
-                Hi! My name is Brian, and I'm a robotics researcher at <a href="https://www.draper.com/">Draper</a>,
-                where I work on developing
-                perception and control capabilities for autonomous quadrotor drones.
+                Hi! My name is Brian, and I'm a robotics engineer at <a href="https://www.fleetrobotics.ai/">Fleet Robotics</a>, 
+                where I'm developing localization and mapping software that will enable an autonomous climbing robot
+                to traverse and clean ship hulls.
+                Previously, I worked on perception and planning for autonomous aerial vehicles at <a href="https://www.draper.com/">Draper</a>.
             </p>
 
             <p>
@@ -55,18 +56,7 @@ layout: default
     <div class="container" id="recent-news">
         <h1>News</h1>
         <ul>
-            <li>Paper available as Arxiv preprint! <a href="https://arxiv.org/abs/2308.07420">"Multiple-Hypothesis Path
-                    Planning with Uncertain Object Detections"</a>.
-            </li>
-            <li>In February 2022, I joined the Autonomy and Real-Time Planning group at <a
-                    href="https://www.draper.com/">Draper</a>
-                as a senior robotics researcher!</li>
-            <li>Paper accepted to ICRA 2021! <a href="https://arxiv.org/abs/2103.15967">"Detecting and Mapping Trees in
-                    Unstructured Environments with a Stereo Camera and Pseudo-Lidar"</a>.
-            </li>
-            <li>I served as the Technical Chair for the third annual <a href="https://www.roboticsdebates.org/">Debates
-                    on the Future of
-                    Robotics Research</a>, held virtually as a workshop at ICRA 2021.
+            <li>In January 2024, I joined Fleet Robotics as a Senior Sensor Fusion, Localization, and Mapping Engineer!
             </li>
         </ul>
     </div>
